# scrabble-cheat

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
ana_app/: apps.py  forms.py  views.py
anagrams_py/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: main.css
templates/: index.html
